--- a/plugin.xml
+++ b/plugin.xml
@@ -30,7 +30,11 @@
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
-            <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+                <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	    	<uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+		<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+		<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+		<uses-permission android:name="android.permission.USE_CREDENTIALS" />
         </config-file>
         
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
