--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="com.repo.phonegap.plugin.backgroundservice"
-        version="2.0.1">
+        version="2.0.2">
 
     <name>Background Service Plugin - Core logic</name>
 
@@ -36,6 +36,8 @@
 		<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 		<uses-permission android:name="android.permission.USE_CREDENTIALS" />
         </config-file>
+        
+         <resource-file src="res/xml/authenticator.xml" target="res/xml/authenticator.xml" />
         
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
   
