--- a/plugin.xml
+++ b/plugin.xml
@@ -49,6 +49,9 @@
             
         </config-file>
         
+        
+        <resource-file src="res/drawable/qtblue.png" target="res/drawable/qtblue.png" />
+        <resource-file src="res/drawable/qtblueicon.png" target="res/drawable/qtblueicon.png" />
         <resource-file src="res/xml/authenticator.xml" target="res/xml/authenticator.xml" />
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
 	        <service android:name="AuthenticatationService">
